OpenCV and CameraSkill

--- a/OpenCVSkill/skill/remote/index.html
+++ b/OpenCVSkill/skill/remote/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SightSkill</title>
+		<title>OpenCVSkill</title>
 		<script type="text/javascript" src="mind-framework.js"></script>
 		<script type="text/javascript">
 			mind.init({callback: function(robot) {
-				skillID="SightSkill";
+				skillID="OpenCVSkill";
 				robot.connectSkill({
-					skillID: skillID
+					skillID: skillID,
+					callback: robot.onRecvSkillData(function(skillID, data) {
+						document.getElementById('img').setAttribute('src', 'data:image/jpeg;base64,'+data);
+					})
 				});
 				document.getElementById("start").onclick = function() {
 					robot.sendData({
@@ -27,5 +30,6 @@
 	<body>
 		<button id="start">Start</button>
 		<button id="stop">Stop</button>
+		<img id="img" alt="img" src="a" />
 	</body>
 </html>
