Add SelectGait() for SensorSkill.

--- a/examples/SensorWalkSkill/remote/index.html
+++ b/examples/SensorWalkSkill/remote/index.html
@@ -21,11 +21,61 @@
 						data: "stop"
 					})
 				}
+				document.getElementById("GaitWave").onclick = function() {
+					robot.sendData({
+						skillID: skillID,
+						data: "GaitWave"
+					})
+				}
+				document.getElementById("GaitRipple").onclick = function() {
+					robot.sendData({
+						skillID: skillID,
+						data: "GaitRipple"
+					})
+				}
+				document.getElementById("GaitTripod").onclick = function() {
+					robot.sendData({
+						skillID: skillID,
+						data: "GaitTripod"
+					})
+				}
+				document.getElementById("GaitOriginal").onclick = function() {
+					robot.sendData({
+						skillID: skillID,
+						data: "GaitOriginal"
+					})
+				}
 			}});
 		</script>
+		<style>
+			#select_gait_box {
+				margin: 0 auto;
+				width: 350px;
+			}
+			#run_box {
+				margin: 0 auto;
+				width: 100px;	
+			}
+			.span {
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body>
-		<button id="start">Start</button>
-		<button id="stop">Stop</button>
+		<div id="run_box">
+			<button id="start">Start</button>
+			<button id="stop">Stop</button>
+		</div>
+		<br>
+		<br>
+		<br>
+		<div id="select_gait_box">
+			<div class="span">Select Gait</div>
+			<br>
+			<button id="GaitWave">GaitWave</button>
+			<button id="GaitRipple">GaitRipple</button>
+			<button id="GaitTripod">GaitTripod</button>
+			<button id="GaitOriginal">GaitOriginal</button>
+		</div>
 	</body>
 </html>
